--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "dateformat": "^5.0.3",
+    "jquery": "^3.6.0",
+    "jquery-ui-dist": "^1.13.1",
     "node-sass": "^7.0.1",
     "parallax-controller": "^1.3.0",
     "react": "^17.0.2",
@@ -23,7 +25,9 @@
     "react-icons": "^4.3.1",
     "react-rellax": "^1.0.3",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
     "react-scroll-parallax": "^3.0.0",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^8.1.0",
