--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-faq-component": "^1.3.1",
     "react-hook-form": "^7.25.1",
     "react-icons": "^4.3.1",
     "react-rellax": "^1.0.3",
